# Watermelon-MediaPlayer

./: .gitignore  MINI_PLAYER_SUMMARY.md  PHASE_1_2_3_SUMMARY.md  PHASE_1_2_SUMMARY.md  README.md  UI_MANIFEST.md  gradle.properties  settings.gradle.kts
.github/workflows/: build-judge.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: tv_banner.xml
app/src/main/res/values/: colors.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml
gradle/: libs.versions.toml
library-storage/: settings.gradle.kts
library-storage/app/: build.gradle.kts
library-storage/app/src/main/: AndroidManifest.xml
library-storage/benchmarks/: build.gradle.kts
library-storage/library-storage/: build.gradle.kts
library-storage/playback-engine/: build.gradle.kts
library-storage/scripts/: verify_interfaces.py
library-storage/ui-presentation/: build.gradle.kts
media-tools/: build.gradle.kts
media-tools/src/main/cpp/: CMakeLists.txt  mp3_encoder_jni.cpp
media-tools/src/main/cpp/lame/: README.md
subtitle-engine/: build.gradle.kts
ui-presentation/: build.gradle.kts
ui-presentation/src/main/res/drawable/: ic_about.xml  ic_arrow_back.xml  ic_arrow_down.xml  ic_arrow_forward.xml  ic_arrow_up.xml  ic_back.xml  ic_background_play.xml  ic_background_play_off.xml  ic_badge_new.xml  ic_brightness_high.xml  ic_brightness_low.xml  ic_brightness_medium.xml  ic_buffering.xml  ic_cancel.xml  ic_check_circle.xml  ic_checklist.xml  ic_close.xml  ic_confirm.xml  ic_copy.xml  ic_delete.xml  ic_edit.xml  (+97 more)
(+186 files in other folders)
